Add: records analytic by category